# restrict_lang

./: --quiet  --show-ast  .dockerignore  .gitignore  .gitmessage  .mise.toml  AGENTS.md  API.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LAMBDA_TYPE_INFERENCE.md  LANGUAGE_SPEC.md  LANGUAGE_SPECIFICATION.md  LICENSE  METHOD_RESOLUTION_FIXES.md  README.md  README_EN.md  README_JP.md  REFERENCE.md  RESTRICT_LANG_EBNF.md  ROADMAP.md  TUTORIAL.md  build.rs  compile_clean.sh  debug_alt_issue.rs  debug_length_issue.rs  debug_parser  debug_parser.rs  debug_recursive.rs  homebrew-tap-setup.md  install-server-setup.md  install.sh  linear_threading_analysis.md  linear_threading_demo.rl  minimal_test.rs  (+64 more)
.cargo/: config.toml
.claude/: agent-instructions.md  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  user_install.sh
.github/: pull_request_template.md
assets/: convert_icons.sh
docs/: ANNOUNCEMENT_2025_ROADMAP.md  ASYNC_CONCURRENCY_DESIGN.md  ASYNC_DESIGN_WITH_TAT.md  DESIGN_SYNTHESIS_2025.md  DOCUMENTATION_RULES.md  FIELD_ACCESS_DESIGN.md  FUTURE_SCOPE_LAYERS.md  IMPLEMENTATION_PRIORITIES.md  LIFETIME_NAMING.md  MODULE_SYSTEM_ROADMAP.md  PATTERN_EXHAUSTIVENESS.md  README.md  SCOPE_IMPLEMENTATION_PLAN.md  STDLIB_ARCHITECTURE.md  SUMMARY.md  TAT_CLEANUP_IMPLEMENTATION.md  TAT_DOCUMENTATION_JP.md  TAT_IMPLEMENTATION_STATUS.md  TEMPORAL_ASYNC_ROADMAP.md  TEMPORAL_ASYNC_THEORY.md  TEMPORAL_CONSTRAINT_RULES.md  TEMPORAL_DESIGN_GUIDE.md  TEMPORAL_SYNTAX_DESIGN.md  TEMPORAL_SYNTAX_UNIFIED.md  TEMPORAL_TYPES_FINAL_DESIGN.md  TEMPORAL_TYPES_RETHINK.md  TYPED_IR_DESIGN.md  TYPE_INFERENCE_DESIGN.md  VALUE_REPRESENTATION_AND_ABI.md  api-index.md  arena-allocator-spec.md  array-type-spec.md  book.toml  code-examples.toml  field_access_poc.rs  file-structure.md  list-memory-layout.md  list-pattern-matching-spec.md  option-type-spec.md  result-type-spec.md  (+5 more)
examples/: bug_triage_board.rl  calibration_pipeline.rl  change_review_gate.rl  checkout_review.rl  context_policy_gate.rl  deploy_gate.rl  dogfood_array_range_window_inference.rl  dogfood_branch_callable_prefix_inference.rl  dogfood_bug_triage_board_runtime.rl  dogfood_callable_codegen_handoff.rl  dogfood_callable_match_inference.rl  dogfood_ci_test_planner_inference.rl  dogfood_empty_branch_inference.rl  dogfood_generic_context_inference.rl  dogfood_generic_export_gap.rl  dogfood_generic_pipeline_runtime.rl  dogfood_impl_dispatch_inference.rl  dogfood_incident_triage_runtime.rl  dogfood_inference_task_queue.rl  dogfood_list_tail_inference.rl  dogfood_metrics_rollup_inference.rl  dogfood_mutable_checkpoint_inference.rl  dogfood_nested_result_list_inference.rl  dogfood_option_container_lambda_inference.rl  dogfood_release_patch_inference.rl  dogfood_release_readiness_inference.rl  dogfood_result_local_inference.rl  dogfood_slo_budget_inference.rl  dogfood_spec_literals_inference.rl  dogfood_support_escalation_inference.rl  dogfood_support_rotation_inference.rl  dogfood_type_inference.rl  elegant_test.rl  experiment_scorecard.rl  feature_rollout_policy.rl  field_access_patterns.rl  form_container.rl  fulfillment_batch.rl  generic_function_value_pipeline.rl  generic_inference.rl  (+43 more)
homebrew/: warder.rb
samples/: affine.rl  compose.rl  context.rl  hello.rl  manifest.json  mutable.rl  pipe.rl  range.rl  record.rl
scripts/: build-pages.sh  install.sh  setup-dev.sh  sync_samples.sh  verify-installation.sh
site/: 404.html  README.md  build-pages.sh  index.html  restrict-code-blocks.js  restrict-highlight.js  robots.txt  sitemap.xml  styles.css
src/: ast.rs  codegen.rs  codegen_web.rs  debug_visualizer.rs  detailed_trace.rs  dev_tools.rs  diagnostic.rs  diagnostics.rs  implementation_typed_pointers.rs  lexer.rs  lib.rs  lifetime_inference.rs  lsp.rs  main.rs  module.rs  parser.rs  property_tests.rs  release_surface.rs  test_framework.rs  type_checker.rs  type_constraints.rs  web.rs
std/: README.md  database.rl  filesystem.rl  http.rl  io.rl  lib.rl  list.rl  math.rl  option.rl  prelude.rl  result.rl  string.rl  test_module.rl
test/: comment_test.rl  comprehensive.rl  conditional.rl  conditional_basic.rl  conditional_basic.wat  conditional_simple.rl  conditional_simple.wat  context_example.rl  debug_lex.rs  debug_nested.rl  example.rl  example_fixed.rl  fun_with_param.rl  hello.rl  hello_string.rl  invalid_syntax.rl  method_resolution.rl  method_resolution.wat  method_test.rl  method_test.wat  minimal.rl  mut_with_semi.rl  nested_blocks_debug.rl  nested_blocks_fixed.rl  newline_test.rl  paren_test.rl  parser_ambiguity.rl  parser_test_all.rl  pipe_paren.rl  pipe_test.rl  pipe_test.wat  reassign_test.rl  simple.rl  simple_add.rl  simple_add.wat  simple_comment_test.rl  simple_comment_test.wat  simple_pipe.rl  single_line.rl  step1.rl  (+32 more)
warden/: Cargo.toml
warden/src/: cage.rs  main.rs
warden/src/commands/: add.rs  build.rs  doctor.rs  init.rs  mod.rs  new.rs  publish.rs  run.rs  test.rs  wrap.rs
warder/: Cargo.toml
warder/src/: cage.rs  main.rs  manifest.rs  registry.rs  vault.rs
warder/src/commands/: add.rs  build.rs  doctor.rs  init.rs  mod.rs  new.rs  publish.rs  run.rs  test.rs  wrap.rs
warder/test-warder/my-app/: .gitignore  README.md  package.rl.toml
warder/test-warder/my-app/src/: hello-world.rl  hello.rl  main.rl  simple.rl  test.rl
warder/test-warder/my-app/test-warder-local/my-project/: README.md  package.rl.toml
warder/test-warder/my-app/test-warder-local/my-project/src/: calc.rl  correct-fact.rl  factorial.rl  main.rl  simple-fact.rl  working-fact.rl
warder/test-warder/my-app/tests/: main_test.rl
web/: README.md  (+4 more)
(+389 files in other folders)
