[package]
name = "restrict_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-trace = "0.2.1"
thiserror = "^1.0.29"
#inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm17-0"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
zstd = "0.13.0"
colored = "2.0"
notify = "6.1"
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

[[bin]]
name = "debug_parser"
path = "src/bin/debug_parser.rs"

[[bin]]
name = "trace_parser"
path = "src/bin/trace_parser.rs"










[dev-dependencies]
pretty_assertions = "^1.3.0"
quickcheck = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]