[package]
name = "warden"
version = "0.1.0"
edition = "2021"
description = "The official build tool and package manager for Restrict Language"
authors = ["Restrict Lang Team"]
license = "MIT"

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
semver = "1.0"
url = "2.5"
zip = "0.6"
oci-client = "0.11"
tempfile = "3.8"
which = "6.0"
colored = "2.1"
indicatif = "0.17"
restrict_lang = { path = ".." }
walkdir = "2.3"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempdir = "0.3"