[package]
name = "warder"
version = "0.1.0"
edition = "2021"
description = "Warder: The official build tool and package manager for Restrict Language"
authors = ["Restrict Lang Team"]
license = "MIT"

[[bin]]
name = "warder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.1"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "2"
sha2 = "0.11"
hex = "0.4"
semver = "1.0"
url = "2.5"
zip = "8.6"
oci-client = "0.17"
tempfile = "3.8"
which = "8"
colored = "2.1"
indicatif = "0.17"
restrict_lang = { path = ".." }
walkdir = "2.3"
reqwest = { version = "0.12", features = ["json"] }
wat = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempdir = "0.3"
